--- a/index.html
+++ b/index.html
@@ -367,6 +367,9 @@
           <li>
           <button onclick="libraryMenu()">Library ▼</button>
           </li>
+	<li>
+          <button onclick="window.open('https://sagaforge17.github.io/others/', '_self')">Others ▼</button>
+          </li>
           </center>
           <div style="position:fixed;right:10px;">
           <li>
