--- a/index.html
+++ b/index.html
@@ -246,6 +246,7 @@
       		-webkit-user-select: none;
       		-ms-user-select: none;
       		user-select: none;
+		cursor: default;
         }
       
       	#editor:focus {
