--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<script src="https://sagaforge17.github.io/2small.js"></script>
-<link rel="icon" href="/favicon.ico">
+<script src="https://www.sagaforge.ct.ws/2small.js"></script>
+<link rel="icon" href="https://www.sagaforge.ct.ws/web-builder/favicon.ico">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Website Builder | SagaForge</title>
@@ -353,7 +353,7 @@
             margin: 0;
       	}
     </style>
-<link rel="stylesheet" href="https://sagaforge17.github.io/bubble-layout.css">
+<link rel="stylesheet" href="https://www.sagaforge.ct.ws/bubble-layout.css">
 </head>
 <body>
 <div id="gradient-bg"></div>
