--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <script src="https://www.sagaforge.ct.ws/2small.js"></script>
-<link rel="icon" href="https://www.sagaforge.ct.ws/web-builder/favicon.ico">
+<link rel="icon" href="https://web-builder.sagaforge.ct.ws/favicon.ico">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Website Builder | SagaForge</title>
